# vidstab_hugin

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml  reqs.txt  vidstab_hugin.sh  vidstab_hugin_tmpl.cfg  vidstab_hugin_tmpl.ini
cameras/sony_as100/: as100_lens.ini  project.pto  rectilinear.pto
src/: #vidstab.py#  args.py  config.py  conveyor.py  crop_scale.py  datatypes.py  ffprobe.py  hugin.py  img_registration.py  inp_frames.py  main.py  out_frames.py  registration.py  utils.py  vidstab.py  vidstab_hugin.py
