[tool.poetry]
name = "vidstab_hugin"
version = "0.1.0"
description = "Vidstab + Hugin lens calibrator, video stabilization"
authors = ["Alexandr Karbivnichiy <ambulajan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
