[tool.poetry]
name = "vidstab_hugin"
version = "0.1.0"
description = "Vidstab + Hugin lens calibrator, video stabilization"
authors = ["Alexandr Karbivnichiy <ambulajan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6, <3.9"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]
cython = "^0.29.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
